--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.2
   fl_chart: ^0.66.2
   google_fonts: ^6.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
