--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^6.1.0
   intl: ^0.20.2
   http: ^1.2.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
